--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ clap = { version = "4.5.31", features = ["derive"] }
 clap-num = "1.2.0"
 glob = "0.3.2"
 # m8-file-parser = { git = "https://github.com/Twinside/m8-file-parser.git" }
-# m8-file-parser = { path = "../m8-file-parser" }
-m8-file-parser = "0.5"
+m8-file-parser = { path = "../m8-file-parser" }
+# m8-file-parser = "0.5"
 
 [features]
 # Used to fix warnings stemming from array-concat
